canary/k8s-demo-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-canary
  labels:
    app: k8s-demo-canary
    app.kubernetes.io/name: k8s-demo-canary
    app.kubernetes.io/component: server
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: k8s-demo-canary
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: k8s-demo-canary
        app.kubernetes.io/name: k8s-demo-canary
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: backend
          image: ghcr.io/stefan-niemeyer/k8s-demo-go/k8s-demo-go:canary
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-app
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http-app
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /ready
              port: http-app
              scheme: HTTP
            periodSeconds: 10
            initialDelaySeconds: 2
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 7m
              memory: 200Mi
            limits:
              cpu: 100m
              memory: 1024Mi
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
      enableServiceLinks: false
      automountServiceAccountToken: false
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-canary-svc
  labels:
    app: k8s-demo-canary
    app.kubernetes.io/name: k8s-demo-canary-svc
    app.kubernetes.io/component: server
spec:
  selector:
    app: k8s-demo-canary
  ports:
    - name: http
      port: 80
      targetPort: http-app
